--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,8 @@
 pluginManagement {
 	repositories {
+		//新增阿里云镜像
+		maven { url "https://maven.aliyun.com/nexus/content/groups/public/" }
+		maven { url "https://maven.aliyun.com/nexus/content/repositories/jcenter" }
 		mavenCentral()
 		gradlePluginPortal()
 		maven {
@@ -23,7 +26,7 @@ pluginManagement {
 
 plugins {
 	id "com.gradle.enterprise" version "3.3.3"
-	id "io.spring.gradle-enterprise-conventions" version "0.0.3"
+//	id "io.spring.gradle-enterprise-conventions" version "0.0.3"
 }
 
 rootProject.name="spring-boot-build"
