--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+buildscript {
+	repositories {
+		maven { url "https://repo.spring.io/plugins-release" }
+	}
+}
 plugins {
 	id "org.jetbrains.kotlin.jvm" apply false // https://youtrack.jetbrains.com/issue/KT-30276
 	id "io.spring.nohttp" version "0.0.3.RELEASE"
@@ -16,6 +21,9 @@ allprojects {
 	group "org.springframework.boot"
 
 	repositories {
+		//新增以下2个阿里云镜像
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+		maven { url 'https://maven.aliyun.com/nexus/content/repositories/jcenter' }
 		mavenCentral()
 		if (!version.endsWith('RELEASE')) {
 			maven { url "https://repo.spring.io/milestone" }
@@ -23,6 +31,8 @@ allprojects {
 		if (version.endsWith('BUILD-SNAPSHOT')) {
 			maven { url "https://repo.spring.io/snapshot" }
 		}
+		//新增spring插件库
+		maven { url "https://repo.spring.io/plugins-release" }
 	}
 
 	configurations.all {
